C2: Folding of unsigned loads is broken w/ @Stable

XMLWordPrintable

    • b114
    • Verified

      At least one of the Lucene tests is failing in 9b110, and the latest hs-comp:

         [junit4] Suite: org.apache.lucene.analysis.fr.TestFrenchLightStemFilter
         [junit4] 2> NOTE: reproduce with: ant test -Dtestcase=TestFrenchLightStemFilter -Dtests.method=testVocabulary -Dtests.seed=4044297F9BFA5E32 -Dtests.slow=true -Dtests.locale=az-Cyrl-AZ -Dtests.timezone=ACT -Dtests.asserts=true -Dtests.file.encoding=UTF-8
         [junit4] FAILURE 1.99s | TestFrenchLightStemFilter.testVocabulary <<<
         [junit4] > Throwable #1: org.junit.ComparisonFailure: term 0 expected:<particuli[]> but was:<particuli[er]>
         [junit4] > at __randomizedtesting.SeedInfo.seed([4044297F9BFA5E32:B159DDC343FD4788]:0)
         [junit4] > at org.apache.lucene.analysis.BaseTokenStreamTestCase.assertTokenStreamContents(BaseTokenStreamTestCase.java:185)
       ...
         [junit4] 2> NOTE: test params are: codec=Asserting(Lucene60): {}, docValues:{}, maxPointsInLeafNode=1153, maxMBSortInHeap=4.174778186834161, sim=ClassicSimilarity, locale=az-Cyrl-AZ, timezone=ACT

      See the "NOTE" line for the one-liner reproducer.

      Fastdebug build does not assert. The test starts to pass with -Dargs="-XX:TieredStopAtLevel=1" or -Dargs="-XX:+UnlockDiagnosticVMOptions -XX:-FoldStableValues", which points to @Stable bug in C2. Dropping @Stable from String.value also makes test pass. This seems to be another thing triggered by @Stable String.value (JDK-8150180) -- we fixed a lot of them, but this one seemed to escape.

            Assignee:
            Vladimir Ivanov
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: