8152179: C2: Folding of unsigned loads is broken w/ @Stable

Reviewed-by: jrose, kvn